fixed sidenav z-index

--- a/src/app/styles/navbar/navbar.css
+++ b/src/app/styles/navbar/navbar.css
@@ -170,7 +170,7 @@
   margin: 0;
 
   position: fixed;
-  z-index: 1;
+  z-index: 999;
 
   box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.248);
 }
