--- a/src/app/styles/userprofile/UserProfile.css
+++ b/src/app/styles/userprofile/UserProfile.css
@@ -35,7 +35,7 @@
 
 .profile-divider {
   width: 100%;
-  height: 15px;
+  height: 0.938rem;
   background-color: var(--tertiary-color);
   margin: 0;
   padding: 0;
@@ -72,8 +72,8 @@
 }
 
 .profile-cardleft img {
-  width: 150px;
-  height: 150px;
+  width: 9.375rem;
+  height: 9.375rem;
   border-radius: 50%;
   margin: 0 auto;
   display: block;
@@ -128,7 +128,7 @@
 .profile-cardright-labels,
 .profile-cardright-content {
   flex: 1;
-  padding: 10px;
+  padding: 0.625rem;
 }
 
 .profile-cardright-labels p,
@@ -159,8 +159,8 @@
   background-color: var(--tertiary-color);
   color: var(--quaternary-color);
   border: none;
-  border-radius: 5px;
-  padding: 0.5rem 6.8rem;
+  border-radius: 10px;
+  padding: 0.8rem 6.8rem;
   margin-top: 1rem;
   cursor: pointer;
   font-size: var(--paragraph-size);
